# audiofischeroptimiser

./: .gitignore  AGENTS.md  AudioFischerOptimizer.spec  CLAUDE.md  Front L High.txt  Front L Low.txt  Front R High.txt  Front R Low.txt  MDAT_AFPX_INSTRUCTIONS.md  Mid Bass Together.txt  PCT6_SUPPORT.md  README.md  REPO_MAP.md  ResoNix Target Curve 2026.txt  Sub.txt  System Sum.txt  TUNE_SESSION.template.md  Tweeters Together.txt  _benchmark.py  _devcalc.py  _make_v3.py  _merge_stream_results.py  _optimizer.py  _optimizer_stream.py  _tunefit.py  afpx.py  audiofischer_gui.py  build_gui.ps1  install_gui.ps1  merge_guided_stream_results.ps1  pct6.py  pyproject.toml  requirements-gui.lock.txt  requirements.txt  run_guided_stream_workers.ps1  run_optimizer.ps1  setup_gui.ps1  start_gui.ps1  uninstall_gui.ps1
New folder/: _tunefit.py  afpx_objective.py
docs/: AUDIO_DSP_RULES.md  AUDIT_2026-07-12.md  COMPARISON_LESSONS_2026-07-17.md  GUI.md  P1_BENCHMARK_2026-07-12.md  ROADMAP.md  TEST_COMMANDS.md
docs/ai_context/: CURRENT_STATE.md  (+6 more)
objective_module/: _tunefit.py  afpx_objective.py  session.py
optimizer_gui/: __init__.py  backend.py  reporting.py  window.py
scripts/: benchmark_search_methods.py  gui_preflight.py  lr_midbass_phase_search.py  make_measurement_manifest.py  multinull_phase_search.py  phase_time_search.py  prepare_phase_cache.py  summarise_candidate_filters.py  summarise_optimizer_run.py  verify_written_tune.py
tests/: test_crossover_ladder.py  test_gui_backend.py  test_objective_hardening.py  test_p0_integrity.py  test_p1_features.py  test_p2_features.py
(+1 files in other folders)
